busy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busy
spec:
  containers:
  - name: busybox
    image: busybox
    # Just spin & wait forever
    command: [ "sh", "-c", "--" ]
    args: [ 'while true; do echo "sleeping" && sleep 30; done;' ]
