busyboxdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: logging-demo
      app.kubernetes.io/name: log-generator      
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: logging-demo
        app.kubernetes.io/name: log-generator
    spec:
      containers:
      - image: busybox
        command: ["/bin/sh"]
        args: ["-c", "while true; do echo $(date) and some foobar wibble; sleep 10;done"]  
        imagePullPolicy: IfNotPresent
        name: busybox
